<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/setting"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rb_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_google"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_yandex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_yandex"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_bing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_bing"
            android:textSize="20sp" />
    </RadioGroup>

</FrameLayout>